--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-text-input-mask",
+  "name": "@newagebel/react-native-text-input-mask",
   "version": "3.1.4",
   "description": "Text input mask for React Native.",
   "main": "dist/index.js",
@@ -34,5 +34,8 @@
   "bugs": {
     "url": "https://github.com/NewAgeBel/react-native-text-input-mask/issues"
   },
-  "homepage": "https://github.com/NewAgeBel/react-native-text-input-mask"
+  "homepage": "https://github.com/NewAgeBel/react-native-text-input-mask",
+  "publishConfig": {
+    "access": "public"
+  }
 }
